# e-migration

./: .env  .gitignore  README.md  docker-compose.yml
amigo/: .env  Dockerfile  answers.go  go.mod  handlers.go  main.go  server.go  tables.go
db/: .gitignore  README.md  docker-compose.yml
db/docker/db/scripts/: olympics.sql
krusty/: .docker.env  .env  Cargo.toml  Dockerfile  diesel.toml
krusty/migrations/2022-10-27-230111_olympics/: down.sql  up.sql
krusty/migrations/2022-11-04-154126_olympics/: down.sql  up.sql
krusty/src/: db.rs  main.rs  model.rs  schema.rs  server.rs  tasks.rs
