[package]
name = "krusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4.22"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.85"
iron = "0.6.1"
router = "0.6.0"
